ensure page/category tree is not covered by bottom toolbar

--- a/share/css/simple-tree.css
+++ b/share/css/simple-tree.css
@@ -4,6 +4,10 @@
  
 .simpleTree a { text-decoration: none; }
 
+div.twoColumnPage.page .simpleTree
+{
+	padding-bottom: 80px; 
+}
 .simpleTree
 {
 	
